# wzcc

./: .gitignore  .roborev.toml  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  prek.toml
.beads/: config.yaml  issues.jsonl
.claude/skills/publish/: skill.md
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: wezterm-tips.md  wezterm_fields.md
examples/: detect_claude.rs  jump_poc.rs
scripts/: bump-version.sh
src/: config.rs  lib.rs  main.rs
src/cli/: install_bridge.rs  install_workspace_switcher.rs  mod.rs
src/daemon/: mod.rs  watcher.rs
src/datasource/: git.rs  mod.rs  process.rs  wezterm.rs
src/detector/: identify.rs  mod.rs
src/models/: mod.rs  pane.rs
src/session_mapping/: mod.rs
src/transcript/: info.rs  mod.rs  parser.rs  path.rs  session_info.rs  state.rs  watcher.rs
src/ui/: app.rs  event.rs  input_buffer.rs  markdown.rs  mod.rs  render.rs  session.rs  slash_commands.rs  toast.rs
src/ui/app/: actions.rs  navigation.rs  runtime.rs
src/ui/render/: answer_select.rs  footer.rs  history.rs  live.rs  slash_complete.rs  summary.rs
