[package]
name = "wzcc"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
regex = "1.11"
chrono = "0.4"
notify = "6.1"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"
